--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -7,19 +7,20 @@
     "test": "jest",
     "prepare": "cd .. && husky install todo-cli/.husky"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.7"
-  },
   "lint-staged": {
     "*.js": [
       "eslint",
       "prettier --write ."
     ]
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.37.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.7"
   }
 }
