--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -16,7 +16,7 @@
   "production": {
     "username": "postgres",
     "password": "changeme",
-    "database": "wd-todo-prod",
+    "database": "ToDo-Application",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
