--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -14,10 +14,7 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "postgres",
-    "password": "changeme",
-    "database": "ToDo-Application",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL",
+    "dialect":"postgres"
   }
 }
